<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    app:nestedScrollFlags="disableScroll"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_music_list_scene"
    tools:context=".musiclist.MusicList">

    <TextView
        android:id="@+id/musicLibTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/signika"
        android:text="@string/evol_future"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/topMusicPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/musicLibTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/musicContainerLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/musicContainer"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:constraint_referenced_ids="btnFavMusicLib,cardViewCoverMusicLib,btnMoreMusicLib"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/btnFavMusicLib"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/favbtn"
                android:padding="25dp"
                android:src="@drawable/ic_round_favorite_24"
                android:tint="@color/text"
                app:neumorph_shadowColorDark="@color/darkShadow"
                app:neumorph_shadowColorLight="@color/lightShadow"
                app:neumorph_shapeAppearance="@style/btn_play"
                tools:ignore="MissingConstraints" />


            <soup.neumorphism.NeumorphCardView
                android:id="@+id/cardViewCoverMusicLib"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:neumorph_shadowColorDark="@color/darkShadow"
                app:neumorph_shadowColorLight="@color/lightShadow"
                app:neumorph_shapeAppearance="@style/cover_image"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/coverMusicLib"
                    android:layout_width="173dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/covermusic"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cover" />
            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/btnMoreMusicLib"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/morebtn"
                android:padding="25dp"
                android:src="@drawable/ic_baseline_more_horiz_24"
                android:tint="@color/text"
                app:neumorph_shadowColorDark="@color/darkShadow"
                app:neumorph_shadowColorLight="@color/lightShadow"
                app:neumorph_shapeAppearance="@style/btn_play"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:contentDescription="@string/musiclibrytabs"
        android:scrollIndicators="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="@color/text"
        app:tabIndicatorColor="@color/gradientOne"
        app:tabRippleColor="@color/gradientTwo"
        app:tabSelectedTextColor="@color/gradientOne"
        app:tabTextColor="@color/text" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topMusicPlayer" />

    <View
        android:id="@+id/tabLayShadow"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@drawable/shadow_tab_lay_light"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/tabLayShadowDark"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="@drawable/shadow_tab_lay_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topMusicPlayer" />


</androidx.constraintlayout.motion.widget.MotionLayout>