<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/music_item_background">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="75dp"
        android:id="@+id/guidelineVertical"/>
       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/txtLay"
           android:elevation="0dp"
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:cardBackgroundColor="@color/background"
           >

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent">

               <TextView
                   android:id="@+id/titleRowMusic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="5dp"
                   android:ellipsize="end"
                   android:maxLines="1"
                   android:text="@string/lose_yourself"
                   android:textColor="@color/text"
                   android:textSize="16sp"
                   app:layout_constraintBottom_toTopOf="@id/artistRowMusic"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/artistRowMusic"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:ellipsize="end"
                   android:maxLines="1"
                   android:text="@string/eminem"
                   android:textColor="@color/text"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/titleRowMusic" />


           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.constraintlayout.widget.ConstraintLayout>


    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/neumorphImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginVertical="4dp"
        android:contentDescription="@string/row_play_btn"
        android:padding="15dp"
        android:src="@drawable/ic_round_play_arrow_24"
        android:tint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shadowColorDark="@color/darkShadow"
        app:neumorph_shadowColorLight="@color/lightShadow"
        app:neumorph_shadowElevation="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>